CELL 6: Advanced Multimodal Fusion Model

--- a/NEURAL_ARCHITECTURE_SEARCH_WITH_MULTIMODAL_FUSION_METHODS4DIAGNOSING_DEMENTIA2.ipynb
+++ b/NEURAL_ARCHITECTURE_SEARCH_WITH_MULTIMODAL_FUSION_METHODS4DIAGNOSING_DEMENTIA2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOCCRMfeGoGhVW/xWXV8PuK",
+      "authorship_tag": "ABX9TyOY1WonbIVOfW9WiYlD8T9j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3195,6 +3195,203 @@
             "Architecture info: {'cell_0': {'selected_operation_idx': 3, 'operation_weights': array([ 1.2360164 , -0.47045425, -2.3251386 ,  1.3059185 , -0.7792638 ,\n",
             "       -0.01091782, -1.0779626 , -0.00849748], dtype=float32), 'temperature': 1.0}, 'cell_1': {'selected_operation_idx': 3, 'operation_weights': array([ 0.8261155 , -1.2763054 ,  0.44578087,  1.1685563 , -0.7267255 ,\n",
             "       -0.49504334,  0.25530347,  0.6060989 ], dtype=float32), 'temperature': 1.0}}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# CELL 6: Advanced Multimodal Fusion Model"
+      ],
+      "metadata": {
+        "id": "uY1Fl_tToAio"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class AttentionFusion(nn.Module):\n",
+        "    def __init__(self, audio_dim, text_dim, hidden_dim=256):\n",
+        "        super(AttentionFusion, self).__init__()\n",
+        "\n",
+        "        self.audio_projection = nn.Linear(audio_dim, hidden_dim)\n",
+        "        self.text_projection = nn.Linear(text_dim, hidden_dim)\n",
+        "\n",
+        "        # Cross-attention mechanism\n",
+        "        self.cross_attention = nn.MultiheadAttention(hidden_dim, num_heads=8, batch_first=True)\n",
+        "        self.layer_norm = nn.LayerNorm(hidden_dim)\n",
+        "\n",
+        "    def forward(self, audio_features, text_features):\n",
+        "        # Project to same dimension\n",
+        "        audio_proj = self.audio_projection(audio_features).unsqueeze(1)  # (batch, 1, hidden)\n",
+        "        text_proj = self.text_projection(text_features).unsqueeze(1)    # (batch, 1, hidden)\n",
+        "\n",
+        "        # Cross attention: audio attends to text\n",
+        "        audio_attended, _ = self.cross_attention(audio_proj, text_proj, text_proj)\n",
+        "        audio_attended = self.layer_norm(audio_attended + audio_proj)\n",
+        "\n",
+        "        # Cross attention: text attends to audio\n",
+        "        text_attended, _ = self.cross_attention(text_proj, audio_proj, audio_proj)\n",
+        "        text_attended = self.layer_norm(text_attended + text_proj)\n",
+        "\n",
+        "        # Combine attended features\n",
+        "        fused = torch.cat([audio_attended.squeeze(1), text_attended.squeeze(1)], dim=1)\n",
+        "\n",
+        "        return fused\n",
+        "\n",
+        "class AdvancedMultimodalModel(nn.Module):\n",
+        "    def __init__(self, audio_dim, text_dim, hidden_dim=256, num_classes=2, fusion_method='attention'):\n",
+        "        super(AdvancedMultimodalModel, self).__init__()\n",
+        "\n",
+        "        self.fusion_method = fusion_method\n",
+        "\n",
+        "        # Audio processing with DARTS\n",
+        "        self.audio_darts = ImprovedDARTSNetwork(\n",
+        "            input_dim=audio_dim,\n",
+        "            hidden_dim=hidden_dim,\n",
+        "            num_layers=3,\n",
+        "            dropout_rate=0.3\n",
+        "        )\n",
+        "\n",
+        "        # Text processing\n",
+        "        self.text_processor = nn.Sequential(\n",
+        "            nn.Linear(text_dim, hidden_dim),\n",
+        "            nn.LayerNorm(hidden_dim),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Dropout(0.3),\n",
+        "            nn.Linear(hidden_dim, hidden_dim),\n",
+        "            nn.ReLU()\n",
+        "        )\n",
+        "\n",
+        "        # Fusion layer\n",
+        "        if fusion_method == 'attention':\n",
+        "            self.fusion = AttentionFusion(hidden_dim, hidden_dim, hidden_dim)\n",
+        "            fusion_output_dim = hidden_dim * 2\n",
+        "        elif fusion_method == 'bilinear':\n",
+        "            self.fusion = nn.Bilinear(hidden_dim, hidden_dim, hidden_dim)\n",
+        "            fusion_output_dim = hidden_dim\n",
+        "        else:  # concatenation\n",
+        "            self.fusion = None\n",
+        "            fusion_output_dim = hidden_dim * 2\n",
+        "\n",
+        "        # Classification head with regularization\n",
+        "        self.classifier = nn.Sequential(\n",
+        "            nn.Linear(fusion_output_dim, hidden_dim),\n",
+        "            nn.LayerNorm(hidden_dim),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Dropout(0.5),\n",
+        "\n",
+        "            nn.Linear(hidden_dim, hidden_dim // 2),\n",
+        "            nn.LayerNorm(hidden_dim // 2),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Dropout(0.4),\n",
+        "\n",
+        "            nn.Linear(hidden_dim // 2, hidden_dim // 4),\n",
+        "            nn.ReLU(),\n",
+        "            nn.Dropout(0.3),\n",
+        "\n",
+        "            nn.Linear(hidden_dim // 4, num_classes)\n",
+        "        )\n",
+        "\n",
+        "        # Initialize weights\n",
+        "        self.apply(self._init_weights)\n",
+        "\n",
+        "    def _init_weights(self, module):\n",
+        "        if isinstance(module, nn.Linear):\n",
+        "            torch.nn.init.xavier_uniform_(module.weight)\n",
+        "            if module.bias is not None:\n",
+        "                torch.nn.init.zeros_(module.bias)\n",
+        "        elif isinstance(module, nn.LayerNorm):\n",
+        "            torch.nn.init.ones_(module.weight)\n",
+        "            torch.nn.init.zeros_(module.bias)\n",
+        "\n",
+        "    def forward(self, audio_features, text_features):\n",
+        "        # Process modalities\n",
+        "        audio_repr = self.audio_darts(audio_features)\n",
+        "        text_repr = self.text_processor(text_features)\n",
+        "\n",
+        "        # Fusion\n",
+        "        if self.fusion_method == 'attention':\n",
+        "            fused = self.fusion(audio_repr, text_repr)\n",
+        "        elif self.fusion_method == 'bilinear':\n",
+        "            fused = self.fusion(audio_repr, text_repr)\n",
+        "        else:  # concatenation\n",
+        "            fused = torch.cat([audio_repr, text_repr], dim=1)\n",
+        "\n",
+        "        # Classification\n",
+        "        output = self.classifier(fused)\n",
+        "\n",
+        "        return output, audio_repr, text_repr\n",
+        "\n",
+        "    def get_architecture_summary(self):\n",
+        "        \"\"\"Get summary of the learned DARTS architecture\"\"\"\n",
+        "        return self.audio_darts.get_architecture_info()\n",
+        "\n",
+        "# Test the advanced model\n",
+        "print(\"=== Testing Advanced Multimodal Model ===\")\n",
+        "\n",
+        "if 'test_features' in locals() and 'bert_features' in locals():\n",
+        "    # Create sample inputs\n",
+        "    sample_audio = torch.FloatTensor(test_features).unsqueeze(0)\n",
+        "    sample_text = bert_features\n",
+        "\n",
+        "    print(f\"Sample audio shape: {sample_audio.shape}\")\n",
+        "    print(f\"Sample text shape: {sample_text.shape}\")\n",
+        "\n",
+        "    # Test different fusion methods\n",
+        "    fusion_methods = ['attention', 'bilinear', 'concatenation']\n",
+        "\n",
+        "    for method in fusion_methods:\n",
+        "        print(f\"\\nTesting {method} fusion...\")\n",
+        "        model = AdvancedMultimodalModel(\n",
+        "            audio_dim=sample_audio.size(1),\n",
+        "            text_dim=sample_text.size(1),\n",
+        "            hidden_dim=128,\n",
+        "            fusion_method=method\n",
+        "        )\n",
+        "\n",
+        "        # Forward pass\n",
+        "        output, audio_repr, text_repr = model(sample_audio, sample_text)\n",
+        "        print(f\"✓ {method} fusion successful!\")\n",
+        "        print(f\"Output shape: {output.shape}\")\n",
+        "        print(f\"Audio representation shape: {audio_repr.shape}\")\n",
+        "        print(f\"Text representation shape: {text_repr.shape}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XowIeldWn7a_",
+        "outputId": "d2bfcbb3-82a6-4691-ce6e-5178b3d0bb66"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=== Testing Advanced Multimodal Model ===\n",
+            "Sample audio shape: torch.Size([1, 266])\n",
+            "Sample text shape: torch.Size([1, 1536])\n",
+            "\n",
+            "Testing attention fusion...\n",
+            "✓ attention fusion successful!\n",
+            "Output shape: torch.Size([1, 2])\n",
+            "Audio representation shape: torch.Size([1, 128])\n",
+            "Text representation shape: torch.Size([1, 128])\n",
+            "\n",
+            "Testing bilinear fusion...\n",
+            "✓ bilinear fusion successful!\n",
+            "Output shape: torch.Size([1, 2])\n",
+            "Audio representation shape: torch.Size([1, 128])\n",
+            "Text representation shape: torch.Size([1, 128])\n",
+            "\n",
+            "Testing concatenation fusion...\n",
+            "✓ concatenation fusion successful!\n",
+            "Output shape: torch.Size([1, 2])\n",
+            "Audio representation shape: torch.Size([1, 128])\n",
+            "Text representation shape: torch.Size([1, 128])\n"
           ]
         }
       ]
