--- a/NEURAL_ARCHITECTURE_SEARCH_WITH_MULTIMODAL_FUSION_METHODS4DIAGNOSING_DEMENTIA2.ipynb
+++ b/NEURAL_ARCHITECTURE_SEARCH_WITH_MULTIMODAL_FUSION_METHODS4DIAGNOSING_DEMENTIA2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOY1WonbIVOfW9WiYlD8T9j",
+      "authorship_tag": "ABX9TyOhHq72q9xsQaHvOU/8o/aj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3395,6 +3395,176 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# CELL 7: Robust Dataset Class with Cross-Validation"
+      ],
+      "metadata": {
+        "id": "GrCye5OmoO28"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class RobustADDataset(Dataset):\n",
+        "    def __init__(self, audio_files, labels, audio_extractor, speech_processor, bert_processor,\n",
+        "                 cache_features=True, augment_data=False):\n",
+        "        self.audio_files = audio_files\n",
+        "        self.labels = labels\n",
+        "        self.audio_extractor = audio_extractor\n",
+        "        self.speech_processor = speech_processor\n",
+        "        self.bert_processor = bert_processor\n",
+        "        self.cache_features = cache_features\n",
+        "        self.augment_data = augment_data\n",
+        "\n",
+        "        # Feature containers\n",
+        "        self.audio_features = []\n",
+        "        self.text_features = []\n",
+        "        self.linguistic_features = []\n",
+        "        self.feature_extraction_failed = []\n",
+        "\n",
+        "        # Statistics\n",
+        "        self.stats = {\n",
+        "            'total_files': len(audio_files),\n",
+        "            'successful_extractions': 0,\n",
+        "            'failed_extractions': 0,\n",
+        "            'audio_feature_dim': 0,\n",
+        "            'text_feature_dim': 0,\n",
+        "            'linguistic_feature_dim': 0\n",
+        "        }\n",
+        "\n",
+        "        if cache_features:\n",
+        "            self._extract_all_features()\n",
+        "\n",
+        "    def _extract_all_features(self):\n",
+        "        \"\"\"Extract all features and cache them\"\"\"\n",
+        "        print(f\"Extracting features from {len(self.audio_files)} audio files...\")\n",
+        "\n",
+        "        successful_indices = []\n",
+        "\n",
+        "        for idx, audio_file in enumerate(tqdm(self.audio_files, desc=\"Extracting features\")):\n",
+        "            try:\n",
+        "                # Extract audio features\n",
+        "                audio_feat = self.audio_extractor.extract_comprehensive_features(audio_file)\n",
+        "\n",
+        "                # Convert audio to text\n",
+        "                text = self.speech_processor.audio_to_text_robust(audio_file)\n",
+        "\n",
+        "                # Extract BERT features\n",
+        "                bert_feat = self.bert_processor.encode_text_robust(text)\n",
+        "\n",
+        "                # Extract linguistic features\n",
+        "                ling_feat = self.bert_processor.extract_linguistic_features(text)\n",
+        "\n",
+        "                # Store features\n",
+        "                self.audio_features.append(audio_feat)\n",
+        "                self.text_features.append(bert_feat.squeeze(0))\n",
+        "                self.linguistic_features.append(ling_feat)\n",
+        "                self.feature_extraction_failed.append(False)\n",
+        "\n",
+        "                successful_indices.append(idx)\n",
+        "                self.stats['successful_extractions'] += 1\n",
+        "\n",
+        "            except Exception as e:\n",
+        "                print(f\"Failed to extract features from {audio_file}: {e}\")\n",
+        "                # Store zero features for failed extractions\n",
+        "                if len(self.audio_features) > 0:\n",
+        "                    zero_audio = np.zeros_like(self.audio_features[0])\n",
+        "                    zero_bert = torch.zeros_like(self.text_features[0])\n",
+        "                    zero_ling = np.zeros_like(self.linguistic_features[0])\n",
+        "                else:\n",
+        "                    # Use default dimensions\n",
+        "                    zero_audio = np.zeros(200)  # Estimated dimension\n",
+        "                    zero_bert = torch.zeros(1536)  # BERT dimension\n",
+        "                    zero_ling = np.zeros(20)  # Linguistic features\n",
+        "\n",
+        "                self.audio_features.append(zero_audio)\n",
+        "                self.text_features.append(zero_bert)\n",
+        "                self.linguistic_features.append(zero_ling)\n",
+        "                self.feature_extraction_failed.append(True)\n",
+        "\n",
+        "                self.stats['failed_extractions'] += 1\n",
+        "\n",
+        "        # Update statistics\n",
+        "        if self.audio_features:\n",
+        "            self.stats['audio_feature_dim'] = len(self.audio_features[0])\n",
+        "            self.stats['text_feature_dim'] = self.text_features[0].shape[0]\n",
+        "            self.stats['linguistic_feature_dim'] = len(self.linguistic_features[0])\n",
+        "\n",
+        "        print(f\"Feature extraction complete:\")\n",
+        "        print(f\"  Successful: {self.stats['successful_extractions']}\")\n",
+        "        print(f\"  Failed: {self.stats['failed_extractions']}\")\n",
+        "        print(f\"  Audio feature dim: {self.stats['audio_feature_dim']}\")\n",
+        "        print(f\"  Text feature dim: {self.stats['text_feature_dim']}\")\n",
+        "        print(f\"  Linguistic feature dim: {self.stats['linguistic_feature_dim']}\")\n",
+        "\n",
+        "    def __len__(self):\n",
+        "        return len(self.audio_files)\n",
+        "\n",
+        "    def __getitem__(self, idx):\n",
+        "        if self.cache_features:\n",
+        "            audio_feat = torch.FloatTensor(self.audio_features[idx])\n",
+        "            text_feat = self.text_features[idx]\n",
+        "            ling_feat = torch.FloatTensor(self.linguistic_features[idx])\n",
+        "        else:\n",
+        "            # Extract features on-the-fly (slower but saves memory)\n",
+        "            audio_feat = torch.FloatTensor(\n",
+        "                self.audio_extractor.extract_comprehensive_features(self.audio_files[idx])\n",
+        "            )\n",
+        "            text = self.speech_processor.audio_to_text_robust(self.audio_files[idx])\n",
+        "            text_feat = self.bert_processor.encode_text_robust(text).squeeze(0)\n",
+        "            ling_feat = torch.FloatTensor(\n",
+        "                self.bert_processor.extract_linguistic_features(text)\n",
+        "            )\n",
+        "\n",
+        "        # Combine BERT and linguistic features\n",
+        "        combined_text_feat = torch.cat([text_feat, ling_feat])\n",
+        "\n",
+        "        label = torch.LongTensor([self.labels[idx]])\n",
+        "\n",
+        "        # Data augmentation (if enabled)\n",
+        "        if self.augment_data and self.training:\n",
+        "            audio_feat = self._augment_audio_features(audio_feat)\n",
+        "\n",
+        "        return audio_feat, combined_text_feat, label\n",
+        "\n",
+        "    def _augment_audio_features(self, audio_feat):\n",
+        "        \"\"\"Simple feature augmentation\"\"\"\n",
+        "        # Add small amount of noise\n",
+        "        noise = torch.randn_like(audio_feat) * 0.01\n",
+        "        augmented = audio_feat + noise\n",
+        "\n",
+        "        # Random feature dropout\n",
+        "        if torch.rand(1) < 0.1:  # 10% chance\n",
+        "            dropout_mask = torch.rand_like(augmented) > 0.05  # Drop 5% of features\n",
+        "            augmented = augmented * dropout_mask.float()\n",
+        "\n",
+        "        return augmented\n",
+        "\n",
+        "    def get_feature_statistics(self):\n",
+        "        \"\"\"Get statistics about extracted features\"\"\"\n",
+        "        if not self.cache_features:\n",
+        "            return \"Statistics not available (features not cached)\"\n",
+        "\n",
+        "        stats = self.stats.copy()\n",
+        "\n",
+        "        # Add feature statistics\n",
+        "        if self.audio_features:\n",
+        "            audio_array = np.array(self.audio_features)\n",
+        "            stats['audio_mean'] = np.mean(audio_array)\n",
+        "            stats['audio_std'] = np.std(audio_array)\n",
+        "            stats['audio_min'] = np.min(audio_array)\n",
+        "            stats['audio_max'] = np.max(audio_array)\n",
+        "\n",
+        "        return stats"
+      ],
+      "metadata": {
+        "id": "-g9m8VQxoLsV"
+      },
+      "execution_count": 8,
+      "outputs": []
     }
   ]
 }
