--- a/NEURAL_ARCHITECTURE_SEARCH_WITH_MULTIMODAL_FUSION_METHODS4DIAGNOSING_DEMENTIA2.ipynb
+++ b/NEURAL_ARCHITECTURE_SEARCH_WITH_MULTIMODAL_FUSION_METHODS4DIAGNOSING_DEMENTIA2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOhHq72q9xsQaHvOU/8o/aj",
+      "authorship_tag": "ABX9TyP+5DdlNphfsnLbtLxsw4M4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3564,6 +3564,267 @@
         "id": "-g9m8VQxoLsV"
       },
       "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# CELL 8: Enhanced Training with Cross-Validation and Early Stopping"
+      ],
+      "metadata": {
+        "id": "2PHCwKiMojtS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class EarlyStopping:\n",
+        "    def __init__(self, patience=10, min_delta=0.001, restore_best_weights=True):\n",
+        "        self.patience = patience\n",
+        "        self.min_delta = min_delta\n",
+        "        self.restore_best_weights = restore_best_weights\n",
+        "        self.best_loss = float('inf')\n",
+        "        self.counter = 0\n",
+        "        self.best_weights = None\n",
+        "\n",
+        "    def __call__(self, val_loss, model):\n",
+        "        if val_loss < self.best_loss - self.min_delta:\n",
+        "            self.best_loss = val_loss\n",
+        "            self.counter = 0\n",
+        "            if self.restore_best_weights:\n",
+        "                self.best_weights = model.state_dict().copy()\n",
+        "        else:\n",
+        "            self.counter += 1\n",
+        "\n",
+        "        if self.counter >= self.patience:\n",
+        "            if self.restore_best_weights and self.best_weights:\n",
+        "                model.load_state_dict(self.best_weights)\n",
+        "            return True\n",
+        "        return False\n",
+        "\n",
+        "def train_with_cross_validation(audio_files, labels, audio_extractor, speech_processor,\n",
+        "                               bert_processor, n_folds=5, epochs_per_fold=30,\n",
+        "                               batch_size=8, learning_rate=0.001):\n",
+        "    \"\"\"Train model with cross-validation\"\"\"\n",
+        "\n",
+        "    print(f\"=== Starting {n_folds}-Fold Cross-Validation ===\")\n",
+        "\n",
+        "    # Stratified K-Fold\n",
+        "    skf = StratifiedKFold(n_splits=n_folds, shuffle=True, random_state=42)\n",
+        "\n",
+        "    fold_results = []\n",
+        "    all_predictions = []\n",
+        "    all_true_labels = []\n",
+        "\n",
+        "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "    print(f\"Using device: {device}\")\n",
+        "\n",
+        "    for fold, (train_idx, val_idx) in enumerate(skf.split(audio_files, labels)):\n",
+        "        print(f\"\\n--- Fold {fold + 1}/{n_folds} ---\")\n",
+        "\n",
+        "        # Split data\n",
+        "        train_files = [audio_files[i] for i in train_idx]\n",
+        "        val_files = [audio_files[i] for i in val_idx]\n",
+        "        train_labels = [labels[i] for i in train_idx]\n",
+        "        val_labels = [labels[i] for i in val_idx]\n",
+        "\n",
+        "        print(f\"Train set: {len(train_files)} files\")\n",
+        "        print(f\"Validation set: {len(val_files)} files\")\n",
+        "        print(f\"Train label distribution: {np.bincount(train_labels)}\")\n",
+        "        print(f\"Val label distribution: {np.bincount(val_labels)}\")\n",
+        "\n",
+        "        # Create datasets\n",
+        "        train_dataset = RobustADDataset(\n",
+        "            train_files, train_labels, audio_extractor,\n",
+        "            speech_processor, bert_processor,\n",
+        "            cache_features=True, augment_data=True\n",
+        "        )\n",
+        "\n",
+        "        val_dataset = RobustADDataset(\n",
+        "            val_files, val_labels, audio_extractor,\n",
+        "            speech_processor, bert_processor,\n",
+        "            cache_features=True, augment_data=False\n",
+        "        )\n",
+        "\n",
+        "        # Create data loaders\n",
+        "        train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, drop_last=True)\n",
+        "        val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
+        "\n",
+        "        # Get feature dimensions\n",
+        "        audio_dim = train_dataset.stats['audio_feature_dim']\n",
+        "        text_dim = train_dataset.stats['text_feature_dim'] + train_dataset.stats['linguistic_feature_dim']\n",
+        "\n",
+        "        print(f\"Audio feature dim: {audio_dim}\")\n",
+        "        print(f\"Combined text feature dim: {text_dim}\")\n",
+        "\n",
+        "        # Initialize model\n",
+        "        model = AdvancedMultimodalModel(\n",
+        "            audio_dim=audio_dim,\n",
+        "            text_dim=text_dim,\n",
+        "            hidden_dim=256,\n",
+        "            num_classes=2,\n",
+        "            fusion_method='attention'\n",
+        "        ).to(device)\n",
+        "\n",
+        "        # Loss and optimizer with class weighting\n",
+        "        class_counts = np.bincount(train_labels)\n",
+        "        class_weights = torch.FloatTensor([1.0/count for count in class_counts]).to(device)\n",
+        "        criterion = nn.CrossEntropyLoss(weight=class_weights)\n",
+        "\n",
+        "        optimizer = torch.optim.AdamW(\n",
+        "            model.parameters(),\n",
+        "            lr=learning_rate,\n",
+        "            weight_decay=0.01,\n",
+        "            betas=(0.9, 0.999)\n",
+        "        )\n",
+        "\n",
+        "        scheduler = torch.optim.lr_scheduler.CosineAnnealingWarmRestarts(\n",
+        "            optimizer, T_0=10, T_mult=2\n",
+        "        )\n",
+        "\n",
+        "        early_stopping = EarlyStopping(patience=15, min_delta=0.001)\n",
+        "\n",
+        "        # Training loop\n",
+        "        fold_train_losses = []\n",
+        "        fold_val_losses = []\n",
+        "        fold_val_accuracies = []\n",
+        "\n",
+        "        for epoch in range(epochs_per_fold):\n",
+        "            # Training\n",
+        "            model.train()\n",
+        "            train_loss = 0.0\n",
+        "            train_correct = 0\n",
+        "            train_total = 0\n",
+        "\n",
+        "            for batch_idx, (audio_feat, text_feat, labels_batch) in enumerate(train_loader):\n",
+        "                audio_feat = audio_feat.to(device)\n",
+        "                text_feat = text_feat.to(device)\n",
+        "                labels_batch = labels_batch.squeeze().to(device)\n",
+        "\n",
+        "                optimizer.zero_grad()\n",
+        "                outputs, _, _ = model(audio_feat, text_feat)\n",
+        "                loss = criterion(outputs, labels_batch)\n",
+        "\n",
+        "                loss.backward()\n",
+        "                torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=1.0)\n",
+        "                optimizer.step()\n",
+        "\n",
+        "                train_loss += loss.item()\n",
+        "                _, predicted = torch.max(outputs.data, 1)\n",
+        "                train_total += labels_batch.size(0)\n",
+        "                train_correct += (predicted == labels_batch).sum().item()\n",
+        "\n",
+        "            # Validation\n",
+        "            model.eval()\n",
+        "            val_loss = 0.0\n",
+        "            val_correct = 0\n",
+        "            val_total = 0\n",
+        "            val_predictions = []\n",
+        "            val_true = []\n",
+        "\n",
+        "            with torch.no_grad():\n",
+        "                for audio_feat, text_feat, labels_batch in val_loader:\n",
+        "                    audio_feat = audio_feat.to(device)\n",
+        "                    text_feat = text_feat.to(device)\n",
+        "                    labels_batch = labels_batch.squeeze().to(device)\n",
+        "\n",
+        "                    outputs, _, _ = model(audio_feat, text_feat)\n",
+        "                    loss = criterion(outputs, labels_batch)\n",
+        "\n",
+        "                    val_loss += loss.item()\n",
+        "                    _, predicted = torch.max(outputs.data, 1)\n",
+        "                    val_total += labels_batch.size(0)\n",
+        "                    val_correct += (predicted == labels_batch).sum().item()\n",
+        "\n",
+        "                    val_predictions.extend(predicted.cpu().numpy())\n",
+        "                    val_true.extend(labels_batch.cpu().numpy())\n",
+        "\n",
+        "            # Calculate metrics\n",
+        "            avg_train_loss = train_loss / len(train_loader)\n",
+        "            avg_val_loss = val_loss / len(val_loader)\n",
+        "            train_accuracy = 100 * train_correct / train_total\n",
+        "            val_accuracy = 100 * val_correct / val_total\n",
+        "\n",
+        "            fold_train_losses.append(avg_train_loss)\n",
+        "            fold_val_losses.append(avg_val_loss)\n",
+        "            fold_val_accuracies.append(val_accuracy)\n",
+        "\n",
+        "            # Learning rate scheduling\n",
+        "            scheduler.step()\n",
+        "\n",
+        "            # Print progress\n",
+        "            if (epoch + 1) % 5 == 0:\n",
+        "                print(f'Epoch [{epoch+1}/{epochs_per_fold}] - '\n",
+        "                      f'Train Loss: {avg_train_loss:.4f}, Train Acc: {train_accuracy:.2f}% - '\n",
+        "                      f'Val Loss: {avg_val_loss:.4f}, Val Acc: {val_accuracy:.2f}%')\n",
+        "\n",
+        "            # Early stopping\n",
+        "            if early_stopping(avg_val_loss, model):\n",
+        "                print(f\"Early stopping at epoch {epoch + 1}\")\n",
+        "                break\n",
+        "\n",
+        "        # Store fold results\n",
+        "        fold_result = {\n",
+        "            'fold': fold + 1,\n",
+        "            'train_losses': fold_train_losses,\n",
+        "            'val_losses': fold_val_losses,\n",
+        "            'val_accuracies': fold_val_accuracies,\n",
+        "            'final_val_accuracy': fold_val_accuracies[-1],\n",
+        "            'best_val_accuracy': max(fold_val_accuracies),\n",
+        "            'predictions': val_predictions,\n",
+        "            'true_labels': val_true,\n",
+        "            'architecture_info': model.get_architecture_summary()\n",
+        "        }\n",
+        "\n",
+        "        fold_results.append(fold_result)\n",
+        "        all_predictions.extend(val_predictions)\n",
+        "        all_true_labels.extend(val_true)\n",
+        "\n",
+        "        # Calculate fold metrics\n",
+        "        fold_accuracy = accuracy_score(val_true, val_predictions)\n",
+        "        print(f\"Fold {fold + 1} Final Accuracy: {fold_accuracy:.4f}\")\n",
+        "\n",
+        "        # Print classification report for this fold\n",
+        "        print(f\"Fold {fold + 1} Classification Report:\")\n",
+        "        print(classification_report(val_true, val_predictions,\n",
+        "                                  target_names=['Control', 'AD']))\n",
+        "\n",
+        "    # Calculate overall cross-validation results\n",
+        "    cv_accuracy = accuracy_score(all_true_labels, all_predictions)\n",
+        "    cv_auc = roc_auc_score(all_true_labels, all_predictions) if len(set(all_true_labels)) > 1 else 0.0\n",
+        "\n",
+        "    fold_accuracies = [result['final_val_accuracy'] for result in fold_results]\n",
+        "    cv_accuracy_mean = np.mean(fold_accuracies)\n",
+        "    cv_accuracy_std = np.std(fold_accuracies)\n",
+        "\n",
+        "    print(f\"\\n=== Cross-Validation Results ===\")\n",
+        "    print(f\"Overall Accuracy: {cv_accuracy:.4f}\")\n",
+        "    print(f\"Mean Fold Accuracy: {cv_accuracy_mean:.4f} ± {cv_accuracy_std:.4f}\")\n",
+        "    print(f\"AUC Score: {cv_auc:.4f}\")\n",
+        "\n",
+        "    print(f\"\\nOverall Classification Report:\")\n",
+        "    print(classification_report(all_true_labels, all_predictions,\n",
+        "                              target_names=['Control', 'AD']))\n",
+        "\n",
+        "    print(f\"\\nOverall Confusion Matrix:\")\n",
+        "    cm = confusion_matrix(all_true_labels, all_predictions)\n",
+        "    print(cm)\n",
+        "\n",
+        "    return {\n",
+        "        'fold_results': fold_results,\n",
+        "        'overall_accuracy': cv_accuracy,\n",
+        "        'mean_accuracy': cv_accuracy_mean,\n",
+        "        'std_accuracy': cv_accuracy_std,\n",
+        "        'auc_score': cv_auc,\n",
+        "        'predictions': all_predictions,\n",
+        "        'true_labels': all_true_labels,\n",
+        "        'confusion_matrix': cm\n",
+        "    }"
+      ],
+      "metadata": {
+        "id": "aKf1Ba2Xoe7T"
+      },
+      "execution_count": 9,
       "outputs": []
     }
   ]
